# deeplearning_openvino_deploy

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  do_infer.cpp  paddle_infer.cpp  test_parallel.cxx
app/copyfiles/: main.cxx
app/http_server/: CMakeLists.txt  server.cxx
app/opencv_test/: CMakeLists.txt  pass_mat.cxx  utils.cxx  utils.h
app/openvino_test/: openvino_cls_infer.cpp  openvino_det_infer.cxx  openvino_one_infer.cxx  openvino_seg_infer.cxx
app/ort_test/: onnx_cls_infer.cpp  onnx_det_infer.cpp  onnx_one_infer.cxx  onnx_seg_infer.cpp
app/tcp_server/: CMakeLists.txt  client.cpp  server_1.cpp  server_2.cpp
app/trt_test/: trtInfer.cs  trt_cls_infer.cxx  trt_det_infer.cxx  trt_one_infer.cxx  trt_seg_infer.cxx
src/: CMakeLists.txt  do_infer.cpp
src/cls_infer/: CMakeLists.txt  inference.cxx  inference.h
src/det_infer/: CMakeLists.txt  inference.cxx  inference.h
src/det_infer_opvno/: CMakeLists.txt  inference.cxx  inference.h
src/fastapi/: server.py
src/fastdeploy/paddle_cls/: inference.cxx  inference.h
src/fastdeploy/paddle_det/: CMakeLists.txt  inference.h
src/ocr_infer/: CMakeLists.txt  ocr_inference.cxx  ocr_inference.h
src/onnxruntime/cls_infer/: CMakeLists.txt  inference.cxx  inference.h
src/onnxruntime/det_infer/: CMakeLists.txt  inference.cxx  inference.h
src/onnxruntime/ort_one_infer/: CMakeLists.txt  base.cxx  base.h
src/onnxruntime/seg_infer/: CMakeLists.txt  inference.cxx  inference.h
src/openvino/cls_infer/: CMakeLists.txt  inference.cxx  inference.h
src/openvino/det_infer/: CMakeLists.txt  inference.cxx  inference.h
src/openvino/opv_one_infer/: CMakeLists.txt  base.cxx  base.h  interface.cxx
src/openvino/seg_infer/: CMakeLists.txt  inference.cxx  inference.h
src/paddle_cls/: CMakeLists.txt
src/paddle_det/: inference.cxx
src/paddle_ocr/: CMakeLists.txt  inference.cxx  inference.h
src/sklearn_infer/: CMakeLists.txt  inference.cxx  inference.h
src/tensorrt/cls_infer/: CMakeLists.txt  inference.cxx  inference.h
src/tensorrt/det_infer/: CMakeLists.txt  inference.cxx  inference.h
src/tensorrt/one_infer/: CMakeLists.txt  base.cxx  base.h  interface.h
src/tensorrt/seg_infer/: CMakeLists.txt  inference.cxx  inference.h
src/utils/: utils.cxx  utils.h
