
if(COMPILE_CLS_LIB)
    add_subdirectory(cls_infer)
    message("Selected build cls_infer")
elseif(COMPILE_SKLEARN_LIB)
    add_subdirectory(sklearn_infer)
    message("Selected build sklearn_infer")
elseif(COMPILE_DET_LIB)
    add_subdirectory(det_infer)
    message("Selected build det_infer")
elseif(COMPILE_DET_OPVNO_LIB)
    add_subdirectory(det_infer_opvno)
    message("Selected build det_infer_opvno")
elseif(COMPILE_SEG_LIB)
    add_subdirectory(seg_infer)
    message("Selected build seg_infer")
elseif(COMPILE_OCR_LIB)
    add_subdirectory(ocr_infer)
    message("Selected build ocr_infer")
elseif(COMPILE_PADDLE_CLS_LIB)
    add_subdirectory(paddle_cls)
    message("Selected build paddle_cls")
elseif(COMPILE_PADDLE_DET_LIB)
    add_subdirectory(paddle_det)
    message(STATUS "Selected build paddle_det")
else()
    message(WARNING "No Lib Selected!")
endif()